--- a/Day1Homework/Day1Homework/Day1Homework.csproj
+++ b/Day1Homework/Day1Homework/Day1Homework.csproj
@@ -138,6 +138,11 @@
     <Compile Include="Models\Model1.cs" />
     <Compile Include="Models\ViewModels\MyViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EFUnitOfWork.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IUnitOfWork.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Services\AccountBookService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\SkillTreeHomework.mdf" />
