1.利用擴充方法(Html Helper、Razor Helper)將列表加入顏色變換 2.加入排序

--- a/Day1Homework/Day1Homework/Day1Homework.csproj
+++ b/Day1Homework/Day1Homework/Day1Homework.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AccountHelper.cs" />
     <Compile Include="Models\AccountBook.cs" />
     <Compile Include="Models\Model1.cs" />
     <Compile Include="Models\ViewModels\MyViewModel.cs" />
